# agent-clis

./: .env.example  .gitattributes  .gitignore  README.md  ROADMAP.md  pyproject.toml
docs/: INSTALL.md  SECRETS.md  TOKEN_ECONOMY.md  TOOLS.md
scripts/: install.ps1  install.sh  measure-token-economy.ps1  measure-token-economy.sh
src/agent_clis/: __init__.py  browserx.py  common.py  corosx.py  docsx.py  redditx.py  refx.py  searchx.py  semgrepx.py  tokensx.py  ytx.py
