[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-clis"
version = "0.1.0"
description = "Small agent-native command line tools for local workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.32.0",
  "youtube-transcript-api>=1.2.0",
]

[project.scripts]
browserx = "agent_clis.browserx:main"
corosx = "agent_clis.corosx:main"
docsx = "agent_clis.docsx:main"
refx = "agent_clis.refx:main"
redditx = "agent_clis.redditx:main"
searchx = "agent_clis.searchx:main"
semgrepx = "agent_clis.semgrepx:main"
tokensx = "agent_clis.tokensx:main"
ytx = "agent_clis.ytx:main"

[tool.setuptools.packages.find]
where = ["src"]
